use new java 9+ api